# soma

./: Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
crates/adapters/: Cargo.toml
crates/adapters/src/: inbound.rs
crates/adapters/src/inbound/: mobile_app.rs
crates/adapters/src/inbound/mobile_app/: app.rs  user_input_sanitizer.rs
crates/adapters/src/outbound/: database.rs
crates/adapters/src/outbound/database/: connection.rs  daos.rs  repositories.rs
crates/adapters/src/outbound/database/migrations/: 20251214143711_initial.sql
crates/app/: Cargo.toml  build.rs
crates/app/src/: main.rs
crates/application/: Cargo.toml
crates/application/src/: create_measurement_usecase.rs  get_measurements_usecase.rs  lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: models.rs
crates/ports/: Cargo.toml
crates/ports/src/: inbound.rs  outbound.rs
crates/ports/src/inbound/: create_measurement_port.rs  get_measurements_port.rs
crates/ports/src/outbound/: measurement_port.rs
scripts/: lint_architecture.sh
ui/: app-window.slint
