[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
authors = ["robin-thoene"]
license = "MIT"

[workspace.dependencies]
async-trait = "0.1.89"
chrono = "0.4.42"
dirs = "6.0.0"
slint = "1.14.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.48.0", features = ["macros", "rt"] }
