[package]
name = "adapters"
edition = "2024"
description = "Implement outbound ports, implement inbound adapters to access the application"
publish = false
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
application = { path = "../application" }
dirs = { workspace = true }
domain = { path = "../domain" }
ports = { path = "../ports" }
slint = { workspace = true }
sqlx = { workspace = true }

[build-dependencies]
slint-build = "1.14.1"
