[package]
name = "soma-bin"
edition = "2024"
description = "A fast, easy-to-use, privacy-respecting, and fully open-source tracker for body weight and body composition"
version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "soma"
path = "src/main.rs"

[dependencies]
adapters = { path = "../adapters" }
tokio = { workspace = true }
