[package]
name = "application"
edition = "2024"
description = "Implement inbound ports, implement business logic"
publish = false
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
domain = { path = "../domain" }
ports = { path = "../ports" }
